[build-system]
requires = ["hatchling >= 1"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "neatlog/__init__.py"


[project]
name = "neatlog"
dynamic = [
    "version"
]
requires-python = ">=3.7"
dependencies = [
    "colorlog>=4<6",
]
[project.optional-dependencies]
windows = [
    "colorama>=0.3.7<0.4.6",
]
dev = [
    "pytest",
]
license = "MIT"
license-files = "LICEN[CS]E.txt"
authors = [
    {name="Fynn Laue"}
]
readme = "README.md"
keywords = ["log", "logging", "color", "colour"]
